<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">
    <TextView
        android:id="@+id/textTitulo2"
        android:layout_width="411dp"
        android:layout_height="51dp"
        android:layout_weight="1"
        android:background="#03A9F4"
        android:text="@string/titulo"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="415dp"
        android:layout_height="574dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo2"
        app:layout_constraintVertical_bias="0.107">

        <EditText
            android:id="@+id/TextNombre"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/TextDesc"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/desc"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/TextFecha"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/fecha"
                android:inputType="date"
                android:textColorHint="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/TextPrioridad"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/prioridad"
                android:inputType="textPersonName"
                android:textAllCaps="true"
                android:textColorHint="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/TextCoste"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/coste"
            android:inputType="number"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="402dp"
        android:layout_height="89dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_registrar"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/registrartarea" />

        <Button
            android:id="@+id/button_cancelar"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/cancelartarea" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>