<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/listaTareas"
        android:layout_width="341dp"
        android:layout_height="532dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="386dp"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonPendientes"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:text="@string/button_pendientes" />

        <Button
            android:id="@+id/buttonHechas"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:text="@string/button_hechas" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="291dp"
        android:layout_height="78dp"
        android:background="#2196F3"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints"
        >

        <TextView
            android:id="@+id/textTitulo"
            android:layout_width="421dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/titulo1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="24sp" />


    </LinearLayout>

    <Button
        android:id="@+id/AñadirTarea"
        android:layout_width="114dp"
        android:layout_height="81dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:text="+"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>